#435: fix broken css for splitbutton, without breaking top table buttons

--- a/src/styles/more-light/theme.pcss
+++ b/src/styles/more-light/theme.pcss
@@ -1924,10 +1924,8 @@
   @apply flex flex-row items-center justify-center;
 }
 .p-splitbutton .p-splitbutton-menubutton {
- @apply -ms-3 h-[34px];
-}
-.p-menuitem-content {
-  @apply h-[34px];
+  @apply -ms-3 block h-full;
+  border: var(--border-weight) var(--border-style) var(--primary-color);
 }
 .p-menuitem-content .p-menuitem-link {
   @apply block w-full;
